--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ header {
 
 
 #discord i:hover {
-  color: #3b5998;
+  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
 }
 
 
