--- a/style.css
+++ b/style.css
@@ -218,12 +218,12 @@ header {
 
 
 #instagram i:hover {
-  color: #bc2a8d;
+  color: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
 }
 
 
 #discord i:hover {
-  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+  color: #7289DA;
 }
 
 
